fixed spacing in footer

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -106,6 +106,7 @@ body, html { height: 100%; background: #eee; }
 	background: #555;
 	text-align: center;
 	font-size: 1.8em;
+	text-shadow: 0 2px 2px rgba(0,0,0,0.5);
 }
 	
 /* Misc */
